--- a/.github/workflows/ctv-roku-api-sync.yml
+++ b/.github/workflows/ctv-roku-api-sync.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: readmeio/github-readme-sync@v2
+      - uses: readmeio/rdme@6.5.0
         with:
-          readme-oas-key: ${{ secrets.README_ROKU_CTV_SECRET }} 
-          oas-file-path: './docs/apis/ctv/roku_oas3.yaml'
-          api-version: 'v0.1'
+          rdme: openapi ./docs/apis/ctv/roku_oas3.yaml --key=${{ secrets.README_API_KEY }} --id=60ffd9bef71e49000fe45051
